--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
     <link rel="import" href="components/login-form/login-form.html" name="LoginForm" async="" />
   </head>
   <body>
-    <header>
+    <header></header>
+    <nav>
       <button type="button" is="login-button" title="Sign in" form="login-form">
         <svg class="current-color icon">
           <use xlink:href="img/icons.svg#sign-in" />
@@ -21,10 +22,44 @@
           <use xlink:href="img/icons.svg#sign-out" />
         </svg>
       </button>
-    </header>
+    </nav>
     <aside></aside>
     <main></main>
-    <footer></footer>
+    <footer>
+    	<div>
+    		<span>&copy;</span>
+    		<time is="current-year">2018</span>
+    		<a href="https://shgysk8zer0.github.io/">
+    			<span>Chris Zuber</span>
+    		</a>
+    	</div>
+    	<div class="links">
+    		<a href="https://shgysk8zer0.github.com/" class="inline-block" title="Blog">
+    			<svg class="current-color icon">
+    				<use xlink:href="img/icons.svg#web-browser" />
+    			</svg>
+    			<span>Blog</span>
+    		</a>
+    		<a href="https://github.com/shgysk8zer0" class="inline-block" title="GitHub">
+    			<svg class="current-color icon">
+    				<use xlink:href="img/icons.svg#mark-github" />
+    			</svg>
+    			<span>GitHub</span>
+    		</a>
+    		<a href="https://twitter.com/shgysk8zer0" class="inline-block" title="Twitter">
+    			<svg class="current-color icon">
+    				<use xlink:href="img/icons.svg#twitter" />
+    			</svg>
+    			<span>Twitter</span>
+    		</a>
+    		<a href="https://github.com/shgysk8zer0/shgysk8zer0.github.io" class="inline-block" title="LinkedIn">
+    			<svg class="current-color icon">
+    				<use xlink:href="img/icons.svg#linkedin" />
+    			</svg>
+    			<span>LinkedIn</span>
+    		</a>
+    	</div>
+    </footer>
     <login-form>
       <svg class="current-color icon" slot="submit-icon">
         <use xlink:href="img/icons.svg#sign-in" />
