Fix LinkedIn URL

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
     			</svg>
     			<span>Twitter</span>
     		</a>
-    		<a href="https://github.com/shgysk8zer0/shgysk8zer0.github.io" class="inline-block" title="LinkedIn">
+    		<a href="https://www.linkedin.com/in/chris-zuber-455346141/" class="inline-block" title="LinkedIn">
     			<svg class="current-color icon">
     				<use xlink:href="img/icons.svg#linkedin" />
     			</svg>
